# GrafikaHazi1

./: CMakeLists.txt  README.md  Skeleton.cpp  framework.cpp
